[metadata]
description-file = README.md

[flake8]
exclude = .git,__pycache,dist,build,debian,*.egg,*.egg-info,*.venv,*.archive
max-line-length=100
filename = *.py
max-complexity = 10

[tool:pytest]
markers =
    unit: Marks a unit test
    cli: Marks a CLI test
testpaths = tests
addopts = --cov=project --cov-report term-missing

[mypy]
files = project/**/*.py
